--- a/org/7_probability.org
+++ b/org/7_probability.org
@@ -64,7 +64,7 @@ Source: [[https://www.explainxkcd.com/wiki/index.php/1132:_Frequentists_vs._Baye
   - The (empirical) law of large numbers guarantees that a large enough
     number of observations will yield the ideal ~Pr(A)~.
 
-  - We can simulate this using R:
+  - We can *simulate* this using R:
     1) define a standard, six-sided, fair die
     2) roll die once (with replacement)
     #+begin_src R
@@ -75,15 +75,12 @@ Source: [[https://www.explainxkcd.com/wiki/index.php/1132:_Frequentists_vs._Baye
     #+end_src
 
     #+RESULTS:
-    : [1] 4
+    : [1] 2
 
   - ~sample~ takes a sample of the specified ~size~ from the elements of ~x~
     either with or without replacement (~replace~).
 
-  - How is ~sample~ different from ~rbinom(n,size,prob)~? The ~r*~ functions
-    generate random variables from their respective distributions.
-
-* "Monte Carlo Simulation"
+* Visualization - "Monte Carlo Simulation"
 
 - We want to repeat the die roll an infinite number of times
 
@@ -96,25 +93,28 @@ Source: [[https://www.explainxkcd.com/wiki/index.php/1132:_Frequentists_vs._Baye
   3) print frequencies of each side with ~table~
   4) print proportions with ~prop.table~
   5) print sample average with ~mean~
+  6) plot the distribution using ~barplot~ (show in separate window)
   #+name: roll_die
   #+begin_src R
-    N <- 10                                #1
+    die <- rep(1:6)  # define standard die
+    N <- 100                                   #1
     events <- replicate(N, sample(die,1))     #2
     table(events) -> tbl                      #3
     tbl
     prop.table(table(events)) -> proportions  #4
     proportions
     mean(proportions)                         #5
+    barplot(height=proportions)
   #+end_src
 
   #+RESULTS: roll_die
   : events
-  : 2 3 4 5 6
-  : 1 1 2 5 1
+  :  1  2  3  4  5  6 
+  : 15 24 11 15 14 21
   : events
-  :   2   3   4   5   6
-  : 0.1 0.1 0.2 0.5 0.1
-  : [1] 0.2
+  :    1    2    3    4    5    6 
+  : 0.15 0.24 0.11 0.15 0.14 0.21
+  : [1] 0.1666667
 
 - The law of large number is visible in the barplot:
   #+begin_src R :results graphics file :file ../img/dieroll.png :noweb yes
@@ -125,13 +125,13 @@ Source: [[https://www.explainxkcd.com/wiki/index.php/1132:_Frequentists_vs._Baye
   #+RESULTS:
   [[file:../img/dieroll.png]]
 
-* Example 2: quantum particle
+* Example 2: quantum particles
 #+attr_html: :width 400px
 [[../img/7_cat.png]]
 
 - In quantum physics, particles no longer have a definite position but
-  instead a probability distribution ("Heisenberg uncertainty
-  principle"[fn:1])
+  instead a (non-standard) probability distribution ("Heisenberg
+  uncertainty principle"[fn:1])
 
 - Quantum physics is also a model-based abstraction of the real
   world. Its applications (like the laser, nuclear power etc.) are
@@ -161,6 +161,10 @@ Source: [[https://www.explainxkcd.com/wiki/index.php/1132:_Frequentists_vs._Baye
 
 - This is known as /Bayesian/ probability, which uses prior knowledge or
   subjective belief to inform the computation (smaller samples needed)
+
+- By contrast, we're looking at the /frequentist/ or classical
+  interpretation of probability, which implies "objectivity"
+
 #+attr_html: :width 300px
 #+caption: Did the Sun just explode? (It's night, so we're not sure) by xkcd
 [[../img/7_xkcd.png]]
@@ -168,7 +172,7 @@ Source: [[https://www.explainxkcd.com/wiki/index.php/1132:_Frequentists_vs._Baye
 
 * Conditional probability
 
-Die example:/
+/Die example:/
 #+begin_quote
 Event A: "you roll a 4 or more" - Pr(A) = Pr({4,5,6}) = 3/6 = 1/2
 Event B: "you roll an even number" - Pr(B) = Pr({2,4,6}) = 3/6 = 1/2
@@ -213,6 +217,26 @@ Event B: "you roll an even number" - Pr(B) = Pr({2,4,6}) = 3/6 = 1/2
 - A and B are /not/ mutually exclusive since ~Pr(A \cap B) \ne 0~: it's
   possible to roll a number that's both even and at least 4.
 
+- In R, the ~intersect~ function performs set intersection of two
+  vectors:
+  #+begin_src R
+    (x <- c(sort(sample(1:20, 7)), NA))
+    (y <- c(sort(sample(3:23, 6)), NA))
+    intersect(x,y)
+  #+end_src
+
+  #+RESULTS:
+  : [1]  2  3  4  6  8  9 14 NA
+  : [1]  3  4 11 12 13 17 NA
+  : [1]  3  4 NA
+
+- Does ~intersect~ also work on strings?
+  #+begin_src R
+    DE <- c("Dr.", "Marcus", "Speh", "Birkenkrahe")
+    US <- c("Dr.", "Alice", "Jewel", "Speh")
+    intersect(DE,US)
+  #+end_src
+
 * Union
 #+attr_html: :width 300px
 [[../img/7_union.png]]
@@ -225,11 +249,23 @@ Event B: "you roll an even number" - Pr(B) = Pr({2,4,6}) = 3/6 = 1/2
 
 - If A and B are mutually exclusive then ~Pr(A \cup B) = Pr(A) + Pr(B)~
 
-- Die example: the probability that you observe an even number or one
+- /Die example/: the probability that you observe an even number or one
   that is at least 4 is ~Pr(A \cup B) = 1/2 + 1/2 - 1/3 = 4/6 = 2/3~
   #+begin_src R
-    all.equal(1/2+1/2-1/3,2/3)
+    all.equal(1/2+1/2-1/3, 2/3)
   #+end_src
+
+- In R, the ~union~ function performs set union of two vectors:
+  #+begin_src R
+    (x <- c(sort(sample(1:20, 7)), NA))
+    (y <- c(sort(sample(3:23, 6)), NA))
+    union(x,y)
+  #+end_src
+
+  #+RESULTS:
+  : [1]  1  6  7  8  9 12 14 NA
+  : [1]  4  5 14 18 19 23 NA
+  :  [1]  1  6  7  8  9 12 14 NA  4  5 18 19 23
 
 * Complement
 #+attr_html: :width 300px
@@ -238,7 +274,7 @@ Event B: "you roll an even number" - Pr(B) = Pr({2,4,6}) = 3/6 = 1/2
 - The complement of ~Pr(A)~ is the probability that A does not occur
   (usually written with an overline), or ~1 - Pr(A)~
 
-- Die example: the probability that you do not roll a 4 or greater (A)
+- /Die example/: the probability that you do not roll a 4 or greater (A)
   is ~1 - 1/2 = 1/2~. If none of {4,5,6} is obtained, you must have
   rolled a {1,2,3}.
 
