--- a/org/8_distributions.org
+++ b/org/8_distributions.org
@@ -7,6 +7,24 @@
 #+caption: Botticelli, La Primavera, Galleria Uffizi, Firenze
 [[../img/botticelli.jpg]]
 * README
+
+* How is ~sample~ different from ~rbinom(n,size,prob)~?
+#+begin_quote
+- The ~r*~ functions generate random variables from well known
+  distributions
+- ~sample~
+#+end_quote
+
+#+begin_src R
+    par(mfrow=c(1,2))
+    die <- 1:6
+  #  hist(replicate(1000,sample(die,6,replace=TRUE)),main="sample")
+    hist(sample(die,1000,replace=TRUE),main="sample")
+    hist(rbinom(1000,6,prob=0.5),main="rbinom")
+#+end_src
+
+#+RESULTS:
+
 * Realizations
 * Discrete Random Variables
 * Continuous Random Variables
